<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ru.murzoid.laboratory</groupId>
  <artifactId>vacuum-filter</artifactId>
  <version>1.0..0</version>
  <packaging>war</packaging>
  <name>vacuum-filter</name>
  <properties>
    <gwt.version>2.1.0</gwt.version>
    <smartgwt.version>3.0</smartgwt.version>
    <gwt-plugin.extraJvmArgs>-Xms512M -Xmx768M -XX:PermSize=128M -XX:MaxPermSize=256M</gwt-plugin.extraJvmArgs>
    <gwt-plugin.localWorkers>4</gwt-plugin.localWorkers>
    <coreGuiParams/>
    <gwt.userAgent>ie8,ie9,gecko1_8,safari</gwt.userAgent>
    <gwt.draftCompile>false</gwt.draftCompile>
    <gwt.soyc>false</gwt.soyc>
    <gwt.style>PRETTY</gwt.style>
    <gwt.locale>en,ru</gwt.locale>
    <gwt.fallback.locale>en,ru</gwt.fallback.locale>

    <enable.tags>true</enable.tags>
  </properties>
  <dependencies>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.16</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.14</version>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>1.0.0.GA</version>
      <classifier>sources</classifier>
    </dependency>

	<dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-tools-sdk</artifactId>
      <version>1.8.5</version>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-api-labs</artifactId>
      <version>1.8.5</version>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-endpoints</artifactId>
      <version>1.8.5</version>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-jsr107cache</artifactId>
      <version>1.8.5</version>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-api-1.0-sdk</artifactId>
      <version>1.8.5</version>
    </dependency>
	
	<dependency>
		<groupId>com.google.gwt</groupId>
		<artifactId>gwt-incubator</artifactId>
		<version>2.0.1</version>
	</dependency>
	
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <version>${gwt.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-dev</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.googlecode.gflot</groupId>
      <artifactId>gflot</artifactId>
      <version>2.4.2</version>
      <scope>provided</scope>
    </dependency>
	
	<dependency>
		<groupId>com.extjs</groupId>
		<artifactId>gxt</artifactId>
		<version>2.2.0</version>
	</dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwt.version}</version>
        <configuration>
		  <webappDirectory>${project.build.directory}/laboratory.war</webappDirectory>
          <noServer>true</noServer>
          <inplace>false</inplace>
          <logLevel>INFO</logLevel> 
          <runTarget>${coreGuiRunTarget}</runTarget>
          <extraJvmArgs>${gwt-plugin.extraJvmArgs}</extraJvmArgs>
          <localWorkers>${gwt-plugin.localWorkers}</localWorkers>
          <draftCompile>${gwt.draftCompile}</draftCompile>
          <soyc>${gwt.soyc}</soyc>
          <buildOutputDirectory>target/gwtclasses</buildOutputDirectory>
          <hostedWebapp>target/hostedWar</hostedWebapp>
          <debugSuspend>false</debugSuspend>
          <style>${gwt.style}</style>
          <strict>true</strict>
          <deploy>${project.build.directory}/gwt-deploy</deploy>
        </configuration>

        <executions>
          <execution>
            <id>gwt-goals</id>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
                        <!-- This id is what does the trick, don't change it. For this to work maven 2.2.0 and later is needed. -->
            <id>default-cli</id>
            <goals>
              <goal>debug</goal>
            </goals>
            <configuration>
              <module>ru.murzoid.project.Laboratory</module>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
		  <webappDirectory>${project.build.directory}/laboratory.war</webappDirectory>
          <archive>
            <manifest>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Build-Number>${buildNumber}</Build-Number>
            </manifestEntries>
          </archive>
          <webResources>
            <resource>
              <filtering>false</filtering>
              <directory>${basedir}/src/main/webapp</directory>
            </resource>
          </webResources>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>add-gwt-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${basedir}/target/generated-sources/gwt</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>